<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="type_text">type your text</string>
    <string name="app_name">Salva Perez Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_button">Search your place</string>
    <string name="text_read">Search your favourite place below</string>
    <string name="action_settings">Settings</string>
    <string name="copy_contacts">Copy from contacts</string>
    <string name="type_here">Type here</string>
    <string name="bilbao">Bilbao</string><string name="valencia">Valencia</string><string name="barcelona">Barcelona</string><string name="madrid">Madrid</string><string name="sevilla">Sevilla</string><string name="valladolid">Valladolid</string><string name="title_activity_contactos">Contactos Activity</string>
    
    
    
    
    
    

</resources>
