<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salvaperezproject.ContactosActivity" >

    <Button
        android:id="@+id/valencia"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/madrid"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/madrid"
        android:text="@string/valencia" />

    <Button
        android:id="@+id/madrid"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="40dp"
        android:text="@string/madrid" />

    <Button
        android:id="@+id/valladolid"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/madrid"
        android:layout_below="@+id/madrid"
        android:layout_marginTop="37dp"
        android:text="@string/valladolid" />

    <Button
        android:id="@+id/sevilla"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/valencia"
        android:layout_alignBottom="@+id/valencia"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:text="@string/sevilla" />

    <Button
        android:id="@+id/bilbao"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/valladolid"
        android:layout_alignBottom="@+id/valladolid"
        android:layout_alignLeft="@+id/valencia"
        android:layout_alignStart="@+id/valencia"
        android:text="@string/bilbao" />

    <Button
        android:id="@+id/barcelona"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bilbao"
        android:layout_toRightOf="@+id/valencia"
        android:text="@string/barcelona" />

</RelativeLayout>