<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.salvaperezproject.MainActivity" >

    <TextView
        android:id="@+id/text_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/type_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/text_read" />

    <EditText
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_read"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/type_here"
        android:ems="10" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/search_button" />

</RelativeLayout>